# avatune

./: CLAUDE.md  README.md  biome.json  package.json  turbo.json
apps/example/: package.json
apps/predictor-example/: package.json  rsbuild.config.ts  tsconfig.json
apps/predictor-storybook/: package.json
apps/react-example/: package.json
apps/react-storybook/: package.json
apps/storybook-entry/: .gitignore  package.json  tsconfig.json
apps/storybook-root/: package.json
apps/svelte-example/: index.html  package.json  rsbuild.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
apps/svelte-storybook/: package.json
apps/vanilla-example/: README.md  package.json  rsbuild.config.ts
apps/vanilla-storybook/: package.json
apps/vue-example/: package.json
python/: .gitignore  README.md  pyproject.toml
python/models/hair_color/: best_hair_color_model.keras  hair_color_classes.json  hair_color_history.json  hair_color_model.keras
python/models/hair_color/tfjs/: model.json
python/models/hair_length/: best_hair_length_model.keras  hair_length_history.json  hair_length_model.keras
python/models/hair_length/tfjs/: classes.json  model.json
python/models/skin_tone/: best_skin_tone_3class.keras  skin_tone_3class.keras  skin_tone_3class_history.json
python/notebooks/hair_color/: 01_explore.py  02_prepare.py  03_train.py
python/notebooks/hair_color/__marimo__/session/: 01_explore.py.json
python/notebooks/hair_length/: 01_prepare.py  02_train.py
python/notebooks/skin_tone/: 01_explore.py  02_prepare.py  03_prepare_3class.py  04_train.py
(+645 files in other folders)
